Fixed #8 used CSS Media queries and iScroll to overflow the dialog

--- a/Resources/StyleSheets/unpDialog.css
+++ b/Resources/StyleSheets/unpDialog.css
@@ -167,3 +167,32 @@
 #dialogPopup fieldset:nth-child(even) {
 	float: right;
 }
+
+
+/* Smartphones (landscape) ----------- */
+@media only screen 
+and (min-width : 321px) {
+ #dialogContent {height: 200px;}
+}
+
+/* Smartphones (portrait) ----------- */
+@media only screen 
+and (max-width : 320px) {
+ #dialogContent {height: 350px;}
+}
+
+/* iPads (landscape) ----------- */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) 
+and (orientation : landscape) {
+ #dialogContent {height: 500px;}
+}
+
+/* iPads (portrait) ----------- */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) 
+and (orientation : portrait) {
+ #dialogContent {height: 700px;}
+}
